crates/rstest-bdd/tests/ui_macros/datatable_duplicate.stderr
error: invalid step function signature: only one DataTable parameter is permitted
 --> tests/ui_macros/datatable_duplicate.rs:6:60
  |
6 | fn step(#[datatable] first: Vec<Vec<String>>, #[datatable] second: Vec<Vec<String>>) {}
  |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.
